--- a/.gitignore
+++ b/.gitignore
@@ -1,59 +1,19 @@
-# Claude and Qwen related files
-.claude
-.qwen
-qwen.md
-claude.md
-feature.md
-# Odoo specific files
-*.pyc
-*.pyo
-*.pyd
-__pycache__/
-*.pot
-*.po
-*.mo
-*~
-.DS_Store
-Thumbs.db
+# Claude Code
+.claude/
+CLAUDE.md
 
-# Odoo logs
+# Development
+examples/
+demo/
+test/
+tests/
 *.log
-odoo.log
 
-# Odoo filestore
-filestore/
-
-# Odoo sessions
-sessions/
-
-# IDE specific files
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-Thumbs.db:encryptable
-
-# Environment files
-.env
-venv/
-env/
-ENV/
-
-# Testing
-.coverage
-htmlcov/
-.pytest_cache/
-
-# Distribution / packaging
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
 .Python
 build/
 develop-eggs/
@@ -66,9 +26,37 @@ lib64/
 parts/
 sdist/
 var/
+wheels/
 *.egg-info/
 .installed.cfg
 *.egg
 
-# Coverage
-.coverage*
+# IDE / Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.pydevproject
+.settings/
+*.sublime-project
+*.sublime-workspace
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+desktop.ini
+
+# Odoo
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.db
+*.sql
