--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ tests/
 
 # Python
 __pycache__/
+__pycache__
 *.py[cod]
 *$py.class
 *.so
@@ -30,7 +31,7 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-
+*.cpython-312.pyc
 # IDE / Editor
 .vscode/
 .idea/
